feat: add test class for Teams and Project services